--- a/IWP DA1/RDJ_movies.html
+++ b/IWP DA1/RDJ_movies.html
@@ -376,7 +376,7 @@
     </div>
     <a href="#main">Back to top</a>
     <br>
-    <a href="favActor.html">Back to Home page</a>
+    <a href="index.html">Back to Home page</a>
     <h5 style="text-align:center">Read more about Robert Downey Jr.'s filmography in <a
             href="https://en.wikipedia.org/wiki/Robert_Downey_Jr._filmography">Wikipedia</a>.</h5>
 </body>
