Added images folder

--- a/IWP DA1/index.html
+++ b/IWP DA1/index.html
@@ -4,7 +4,7 @@
 <head>
     <title>Favourite Actor</title>
     <style>
-        body 
+        body
         {
             background-color: aliceblue;
             border-style: inset;
@@ -41,8 +41,8 @@
             popular success in his youth, followed by a period of substance abuse and legal troubles, before a
             resurgence of
             commercial success later in his career.</p>
-        <a href="https://cdn.mos.cms.futurecdn.net/s79GLd7fDs7rToLJ3xYwd9-1200-80.jpg" target="_blank"><img
-                src="https://cdn.mos.cms.futurecdn.net/s79GLd7fDs7rToLJ3xYwd9-1200-80.jpg"
+        <a href="Images/rdj.jpg" target="_blank"><img
+                src="Images/rdj.jpg"
                 style="height:350px; width=500px; display:block; margin:auto"></a>
         <h3>Personal Life</h3>
         <p>
