Changed text fonts

--- a/IWP DA1/RDJ_movies.html
+++ b/IWP DA1/RDJ_movies.html
@@ -10,9 +10,13 @@
             border-color: midnightblue;
             border-width: 2px;
             margin: 20px;
-            padding: 30px 80px;
+            padding: 30px 90px;
+            font-family: sans-serif;
+            text-align: justify;
         }
-
+        h3 {
+            font-variant: small-caps;
+        }
         div {
             border-style: none;
             margin: 50px 0px;
@@ -26,9 +30,9 @@
 </head>
 
 <body>
-    <a href="index.html">Back to Home page</a>
+    <button><a href="index.html">Home</a></button>
     <br>
-    <h1 id="main">Top Movies of RDJ</h1>
+    <h1 id="main" style="text-transform:uppercase">Top Movies of RDJ</h1>
     <div>
         <h3 id="iron">Iron Man Series</h3>
         <ol>
@@ -39,7 +43,7 @@
                         style="height:500px; width:350px"></a>
                 <p>Iron Man is a 2008 American superhero film based on the Marvel Comics character of the same name.
                     Produced by
-                    Marvel Studios and distributed by Paramount Pictures,[N 1] it is the first film in the Marvel
+                    Marvel Studios and distributed by Paramount Pictures,<sup>[N 1]</sup> it is the first film in the Marvel
                     Cinematic
                     Universe
                     (MCU). Directed by Jon Favreau from a screenplay by the writing teams of Mark Fergus and Hawk Ostby,
@@ -54,7 +58,7 @@
                     and
                     becomes
                     the superhero Iron Man.
-                    <br><br><b>Plot</b> <br>
+                    <br><br><b>Plot</b><br>
                     When Tony Stark, an industrialist, is captured, he constructs a high-tech armoured suit to escape.
                     Once
                     he
@@ -70,7 +74,7 @@
                 <p>Iron Man 2 is a 2010 American superhero film based on the Marvel Comics character Iron Man. Produced
                     by
                     Marvel
-                    Studios and distributed by Paramount Pictures,[N 1] it is the sequel to Iron Man (2008) and the
+                    Studios and distributed by Paramount Pictures,<sup>[N 1]</sup> it is the sequel to Iron Man (2008) and the
                     third
                     film
                     in
@@ -102,12 +106,12 @@
                     target="_blank"><img
                         src="Images/ironman3.jpg"
                         style="height:500px; width:350px"></a>
-                <p>Iron Man 3 (titled onscreen as Iron Man Three)[4][5] is a 2013 American superhero film based on the
+                <p>Iron Man 3 (titled onscreen as Iron Man Three)<sup>[4]</sup><sup>[5]</sup> is a 2013 American superhero film based on the
                     Marvel
                     Comics
                     character Iron Man, produced by Marvel Studios and distributed by Walt Disney Studios Motion
-                    Pictures.[N
-                    1]
+                    Pictures.<sup>[N
+                    1]</sup>
                     It
                     is the sequel to Iron Man (2008) and Iron Man 2 (2010), and the seventh film in the Marvel Cinematic
                     Universe
@@ -143,13 +147,13 @@
                         src="Images/avengers1.jpg"
                         style="height:500px; width:350px"></a>
                 <p>
-                    Marvel's The Avengers[4] (classified under the name Marvel Avengers Assemble in the United Kingdom
+                    Marvel's The Avengers<sup>[4]</sup> (classified under the name Marvel Avengers Assemble in the United Kingdom
                     and
-                    Ireland),[1][5] or simply The Avengers, is a 2012 American superhero film based on the Marvel Comics
+                    Ireland),<sup>[1]</sup><sup>[5]</sup> or simply The Avengers, is a 2012 American superhero film based on the Marvel Comics
                     superhero
                     team of the same name. Produced by Marvel Studios and distributed by Walt Disney Studios Motion
-                    Pictures,[N
-                    1]
+                    Pictures,<sup>[N
+                    1]</sup>
                     it is the sixth film in the Marvel Cinematic Universe (MCU). Written and directed by Joss Whedon,
                     the
                     film
@@ -290,7 +294,7 @@
                         style="height:500px; width:350px"></a>
                 <p>
                     Sherlock Holmes: A Game of Shadows is a 2011 period mystery action film directed by Guy Ritchie and
-                    produced by Joel Silver, Lionel Wigram, Susan Downey and Dan Lin.[4] It is the sequel to the 2009
+                    produced by Joel Silver, Lionel Wigram, Susan Downey and Dan Lin.<sup>[4]</sup> It is the sequel to the 2009
                     film
                     Sherlock Holmes and features the Sherlock Holmes and Dr. John Watson characters created by Sir
                     Arthur
@@ -301,7 +305,7 @@
                     Irene
                     Adler. Although the film follows an original premise, it incorporates more closely elements of Conan
                     Doyle's short stories, including "The Final Problem" (1893) and "The Adventure of the Empty House"
-                    (1903).[5] In the film, Holmes and Watson travel across Europe with a Romani adventuress to foil an
+                    (1903).<sup>[5]</sup> In the film, Holmes and Watson travel across Europe with a Romani adventuress to foil an
                     intricate plot by their cunning nemesis, Professor Moriarty, to instigate a major European conflict.
                     <br><br><b>Plot</b><br>
                     Sherlock Holmes investigates a series of murders that lead him to Professor Moriarty. However, he,
@@ -376,9 +380,8 @@
             </p>
         </div>
     </div>
-    <a href="#main">Back to top</a>
+    <button><a href="#main">Top</a></button>
     <br>
-    <a href="index.html">Back to Home page</a>
     <h5 style="text-align:center">Read more about Robert Downey Jr.'s filmography in <a
             href="https://en.wikipedia.org/wiki/Robert_Downey_Jr._filmography">Wikipedia</a>.</h5>
 </body>
