--- a/IWP DA1/index.html
+++ b/IWP DA1/index.html
@@ -4,22 +4,28 @@
 <head>
     <title>Favourite Actor</title>
     <style>
-        body
-        {
-            background-color: aliceblue;
+        body {
+            background-color: azure;
             border-style: inset;
             border-color: darkslategrey;
             border-width: 2px;
             margin: 20px;
-            padding: 30px 80px;
+            padding: 30px 50px;
+            font-family: sans-serif;
         }
-        div
-        {
+
+        h2,
+        h3 {
+            font-variant: small-caps;
+        }
+
+        div {
             border-style: none;
-            margin: 0px 20px 0px 20px;
+            margin: 0px 40px 0px 40px;
+            text-align: justify;
         }
-        #main
-        {
+
+        #main {
             border-style: none;
             margin-bottom: 60px;
         }
@@ -29,7 +35,7 @@
 <body>
     <h1 id="main" style="text-align:center">ROBERT DOWNEY JR.</h1>
     <h4>
-        <ol>
+        <ol style="font-size:18px; list-style-type:none">
             <li><a href="#sh1">Background</a></li>
             <li><a href="#sh2">Top Movies</a></li>
             <li><a href="#sh3">Other favourite actors</a></li>
@@ -41,8 +47,7 @@
             popular success in his youth, followed by a period of substance abuse and legal troubles, before a
             resurgence of
             commercial success later in his career.</p>
-        <a href="Images/rdj.jpg" target="_blank"><img
-                src="Images/rdj.jpg"
+        <a href="Images/rdj.jpg" target="_blank"><img src="Images/rdj.jpg"
                 style="height:350px; width=500px; display:block; margin:auto"></a>
         <h3>Personal Life</h3>
         <p>
@@ -53,24 +58,25 @@
             one-quarter Irish descent, while Downey's mother had Scottish, German, and
             Swiss ancestry.
             Robert's original family name was Elias which was changed by his father to enlist in the Army. Downey and
-            his older sister Allyson grew up in Greenwich Village.[14] <br><br>
+            his older sister Allyson grew up in Greenwich Village.<sup>[14]</sup> <br><br>
 
             As a child, Downey was "surrounded by drugs." His father, a drug addict, allowed Downey to use marijuana at
             age
-            six, an incident which his father later said he regretted.[14] Downey later stated that drug use
+            six, an incident which his father later said he regretted.<sup>[14]</sup> Downey later stated that drug use
             became an
             emotional bond between him and his father: "When my dad and I would do drugs together, it was like him
             trying to
             express his love for me in the only way he knew how." Eventually, Downey began spending every night abusing
-            alcohol and "making a thousand phone calls in pursuit of drugs".[15][16] <br><br>
+            alcohol and "making a thousand phone calls in pursuit of drugs".<sup>[15]</sup><sup>[16]</sup> <br><br>
 
             During his childhood, Downey had minor roles in his father's films. He made his acting debut at the age of
             five,
             playing a sick puppy in the absurdist comedy Pound (1970), and then at seven appeared in the surrealist
             Western
-            Greaser's Palace (1972).[11] At the age of 10, he was living in England and studied classical ballet
+            Greaser's Palace (1972).<sup>[11]</sup> At the age of 10, he was living in England and studied classical
+            ballet
             as part of
-            a larger curriculum.[17][18] He attended the Stagedoor Manor Performing Arts Training
+            a larger curriculum.<sup>[17]</sup><sup>[18]</sup> He attended the Stagedoor Manor Performing Arts Training
             Center in upstate New York
             as a teenager. When his parents divorced in 1978, Downey moved to California with his father, but in 1982,
             he
@@ -79,30 +85,39 @@
 
             Downey started dating actress Sarah Jessica Parker in 1984 after meeting her on the set of Firstborn. The
             couple
-            later separated in 1991 due to his drug addiction.[124]<br><br>
+            later separated in 1991 due to his drug addiction.<sup>[124]</sup><br><br>
 
-            He married actress and singer Deborah Falconer on May 29, 1992, after a 42-day courtship.[125] Their son,
+            He married actress and singer Deborah Falconer on May 29, 1992, after a 42-day courtship.<sup>[125]</sup>
+            Their son,
             Indio
-            Falconer Downey, was born in September 1993.[126] The strain on their marriage from Downey's repeated trips
+            Falconer Downey, was born in September 1993.<sup>[126]</sup> The strain on their marriage from Downey's
+            repeated trips
             to
             rehab and jail finally reached a breaking point; in 2001, in the midst of Downey's last arrest and
             sentencing to
-            an extended stay in rehab, Falconer left Downey and took their son with her.[125] Downey and Falconer
+            an extended stay in rehab, Falconer left Downey and took their son with her.<sup>[125]</sup> Downey and
+            Falconer
             finalized
             their divorce on April 26, 2004.<br><br>
 
             Downey with wife Susan Downey at the 2010 Academy Awards
             In 2003, Downey met producer Susan Downey (née Levin), an Executive Vice President of Production at Joel
-            Silver's film company, Silver Pictures on the set of Gothika.[4] Though Susan twice turned down his amorous
-            advances, she and Downey did quietly strike up a romance during production.[127] Despite Susan's worries
+            Silver's film company, Silver Pictures on the set of Gothika.<sup>[4]</sup> Though Susan twice turned down
+            his amorous
+            advances, she and Downey did quietly strike up a romance during production.<sup>[127]</sup> Despite Susan's
+            worries
             that
-            the romance would not last after the completion of shooting because "he's an actor; I have a real job",[127]
+            the romance would not last after the completion of shooting because "he's an actor; I have a real
+            job",<sup>[127]</sup>
             the
             couple's relationship continued after production wrapped on Gothika, and Downey proposed to Susan on the
             night
-            before her thirtieth birthday.[127] In August 2005, the couple were married, in a Jewish ceremony, at
-            Amagansett, New York.[128][129] A tattoo on one of his biceps reads "Suzie Q" in tribute to her.[130] The
-            Downeys’ first child, a son named Exton Elias, was born in February 2012,[131] and their second, a daughter
+            before her thirtieth birthday.<sup>[127]</sup> In August 2005, the couple were married, in a Jewish
+            ceremony, at
+            Amagansett, New York.<sup>[128]</sup><sup>[129]</sup> A tattoo on one of his biceps reads "Suzie Q" in
+            tribute to her.<sup>[130]</sup> The
+            Downeys’ first child, a son named Exton Elias, was born in February 2012,<sup>[131]</sup> and their second,
+            a daughter
             named Avri Roel, was born in November 2014.
         </p>
         <h3>Career</h3>
@@ -209,7 +224,7 @@
             to 2015, Downey has topped the Forbes list of Hollywood's highest-paid actors, making an estimated $80
             million
             in earnings between June 2014 and June 2015.</p>
-        <h2 id="sh2">Top Movies</h2>
+        <a href="RDJ_movies.html"><h2 id="sh2">Top Movies</h2></a>
         <ul>
             <li><a href="RDJ_movies.html#iron" target="_blank">Iron Man Series</a></li>
             <li><a href="RDJ_movies.html#avng" target="_blank">Avengers Series</a></li>
@@ -227,7 +242,7 @@
             <li><a href="https://en.wikipedia.org/wiki/Meryl_Streep">Meryl Streep</a></li>
 
         </ul>
-        <a href="#main">Back to top</a>
+        <button><a href="#main">Top</a></button>
     </div>
 </body>
 
