--- a/IWP DA1/RDJ_movies.html
+++ b/IWP DA1/RDJ_movies.html
@@ -26,11 +26,22 @@
             border-style: none;
             margin: 0px 40px;
         }
+        a:link {
+            text-decoration: none;
+            color: black;
+        }
+        a:hover {
+            text-decoration: underline red;
+            color: red;
+        }
+        a:active {
+            color:red;
+        }
     </style>
 </head>
 
 <body>
-    <button><a href="index.html">Home</a></button>
+    <button><a href="index.html" target="_blank">Home</a></button>
     <br>
     <h1 id="main" style="text-transform:uppercase">Top Movies of RDJ</h1>
     <div>
