--- a/IWP DA1/index.html
+++ b/IWP DA1/index.html
@@ -14,8 +14,18 @@
             font-family: sans-serif;
         }
 
-        h2,
-        h3 {
+        a:link {
+            text-decoration: none;
+            color: black;
+        }
+        a:hover {
+            text-decoration:underline red;
+            color: red;
+        }
+        a:active {
+            color: red;
+        }
+        h2,h3 {
             font-variant: small-caps;
         }
 
@@ -224,7 +234,7 @@
             to 2015, Downey has topped the Forbes list of Hollywood's highest-paid actors, making an estimated $80
             million
             in earnings between June 2014 and June 2015.</p>
-        <a href="RDJ_movies.html"><h2 id="sh2">Top Movies</h2></a>
+        <a href="RDJ_movies.html" target="_blank"><h2 id="sh2">Top Movies</h2></a>
         <ul>
             <li><a href="RDJ_movies.html#iron" target="_blank">Iron Man Series</a></li>
             <li><a href="RDJ_movies.html#avng" target="_blank">Avengers Series</a></li>
