Added a form page.

--- a/IWP DA1/RDJ_movies.html
+++ b/IWP DA1/RDJ_movies.html
@@ -41,7 +41,7 @@
 </head>
 
 <body>
-    <button><a href="index.html" target="_blank">Home</a></button>
+    <a href="index.html" target="_blank"><button>Home</button></a>
     <br>
     <h1 id="main" style="text-transform:uppercase">Top Movies of RDJ</h1>
     <div>
@@ -391,7 +391,7 @@
             </p>
         </div>
     </div>
-    <button><a href="#main">Top</a></button>
+    <a href="#main"><button>Top</button></a>
     <br>
     <h5 style="text-align:center">Read more about Robert Downey Jr.'s filmography in <a
             href="https://en.wikipedia.org/wiki/Robert_Downey_Jr._filmography">Wikipedia</a>.</h5>
