--- a/IWP DA1/index.html
+++ b/IWP DA1/index.html
@@ -43,6 +43,10 @@
 </head>
 
 <body>
+    <div style="text-align:right">
+        <label for="login" style="font-style:italic">Sign up for more </label>
+        <a href="form.html" target="_blank"><button id="login">Sign up</button></a>
+    </div>
     <h1 id="main" style="text-align:center">ROBERT DOWNEY JR.</h1>
     <h4>
         <ol style="font-size:18px; list-style-type:none">
@@ -252,7 +256,7 @@
             <li><a href="https://en.wikipedia.org/wiki/Meryl_Streep">Meryl Streep</a></li>
 
         </ul>
-        <button><a href="#main">Top</a></button>
+        <a href="#main"><button>Top</button></a>
     </div>
 </body>
 
